added socket io and express validator

--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "dev": "cross-env NODE_ENV=development nodemon --exec babel-node ./src/server.js",
     "test": "cross-env NODE_ENV=test && nyc --require --reporter=html --reporter=text mocha -r @babel/register ./src/tests/index.js --timeout 10000 --recursive --exit || true",
     "coverage": "nyc npm run test && nyc report --reporter=text-lcov --reporter=lcov | node ./node_modules/coveralls/bin/coveralls.js --verbose"
-  }
-,
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -21,9 +20,11 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.10",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "socket.io": "^3.0.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
